[B]Version 0.6.5[/B]
- Added check for 'http' when using Urllib urlopen
- Fixed issue with Redefining built-in 'type'

[B]Version 0.6.4[/B]
- Fixed nonetype exception

[B]Version 0.6.3[/B]
- Fixed bare exception

[B]Version 0.6.2[/B]
- Refactored Tubi TV functions a bit

[B]Version 0.6.1[/B]
- Renamed function to get live animal streams
- Added Tubi TV functions

[B]Version 0.6.0[/B]
- Added MST3K
- Added RiffTrax
- Added Pluto TV Animals
- Added Live Music Replays
- Added Stand-Up TV

[B]Version 0.5.9[/B]
- Added Black Cinema
- Added Pluto TV Cine
- Added Voyager Documentaries
- Added Science TV
- Added Adventure TV
- Added DocuTV
- Added FrontDoor
- Added Pluto TV History
- Added Pluto TV Indies
- Added Pluto TV Travel

[B]Version 0.5.8[/B]
- Added Food TV
- Added Wahlburgers
- Added Dog the Bounty Hunter

[B]Version 0.5.7[/B]
- Fixed Jewelry TV
- Some minor code tweaks

[B]Version 0.5.6[/B]
- Removed CNBC

[B]Version 0.5.5[/B]
- Started adding support for Python 3

[B]Version 0.5.4[/B]
- Removed unused import

[B]Version 0.5.3[/B]
- Fixed missing images in Animal TV

[B]Version 0.5.2[/B]
- Updated server connections

[B]Version 0.5.1[/B]
- Minor update for Animal TV

[B]Version 0.5.0[/B]
- Fixed issue with Live streams being marked as watched

[B]Version 0.4.9[/B]
- Removed YouTube MPEGDASH requirement for YouTube Live streams, It doesn't seem to be needed any longer

[B]Version 0.4.8[/B]
- Minor refactoring
- Added function to get streams for Animal TV

[B]Version 0.4.7[/B]
- Updated logos

[B]Version 0.4.6[/B]
- Updated logos

[B]Version 0.4.5[/B]
- Updated play function

[B]Version 0.4.4[/B]
- Updated a few functions

[B]Version 0.4.3[/B]
- Updated a few functions

[B]Version 0.4.2[/B]
- Updated stream_plug

[B]Version 0.4.1[/B]
- Updated stream_plug

[B]Version 0.4.0[/B]
- Added Flashback TV channel
- Added Runway TV channel

[B]Version 0.3.9[/B]
- Added Gusto channel
- Added Big Life TV channel
- Added Soar channel

[B]Version 0.3.8[/B]