@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='UTF-8' standalone='yes'?>
-<addon id="script.module.m7lib" name="m7lib" provider-name="mhancoc7" version="0.6.5">
+<addon id="script.module.m7lib" name="m7lib" provider-name="mhancoc7" version="0.6.6">
     <requires>
         <import addon="xbmc.python" version="2.20.0"/>
         <import addon="plugin.video.youtube" version="5.5.1"/>
